@@ -1,3 +1,13 @@
+2006-05-20  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
+
+	* src/SocketCore.cc
+	(isReadable): Added secure to the condition.
+	* src/HttpConnection.cc
+	(receiveResponse): Fixed a bug that causes no response header
+	exception.
+	* src/Peer.h
+	(getFastSet): Fixed the return value type.
+	
 2006-05-18  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
 
 	To remove a wait from download loop:
